--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "ethers": "^6.15.0",
+    "graphql": "^16.11.0",
+    "graphql-request": "^7.2.0",
     "input-otp": "1.4.1",
     "jsbi": "^4.3.2",
     "lucide-react": "^0.454.0",
@@ -64,16 +67,15 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "ethers": "^6.15.0",
     "viem": "^2.30.0",
     "wagmi": "^2.16.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@typechain/ethers-v6": "^0.5.1",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@typechain/ethers-v6": "^0.5.1",
     "pino-pretty": "^13.0.0",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
