--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "vaul": "^0.9.6",
     "viem": "^2.30.0",
     "wagmi": "^2.16.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@typechain/ethers-v6": "^0.5.1",
